{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 131,
  "lineage": "263066e3-f71f-0b00-2676-07393a13b643",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "karv_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:internet-gateway/igw-04721f186831c900b",
            "id": "igw-04721f186831c900b",
            "owner_id": "637423247328",
            "tags": {
              "Name": "karv-igw"
            },
            "tags_all": {
              "Name": "karv-igw"
            },
            "vpc_id": "vpc-075bdc149718eb63a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.karv_db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "karv_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:route-table/rtb-0436f80f30cd139bd",
            "id": "rtb-0436f80f30cd139bd",
            "owner_id": "637423247328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04721f186831c900b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "karv-route-table"
            },
            "tags_all": {
              "Name": "karv-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-075bdc149718eb63a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.karv_igw",
            "module.vpc.aws_vpc.karv_db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "karv_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcb272496e835670",
            "route_table_id": "rtb-0436f80f30cd139bd",
            "subnet_id": "subnet-0aed5897bc0378aa6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.karv_igw",
            "module.vpc.aws_route_table.karv_route_table",
            "module.vpc.aws_subnet.karv_db_subnet",
            "module.vpc.aws_vpc.karv_db_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9e2ae37aa8de92e",
            "route_table_id": "rtb-0436f80f30cd139bd",
            "subnet_id": "subnet-06a129038f8cbe0de"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.karv_igw",
            "module.vpc.aws_route_table.karv_route_table",
            "module.vpc.aws_subnet.karv_db_subnet",
            "module.vpc.aws_vpc.karv_db_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5d72444568e32b7",
            "route_table_id": "rtb-0436f80f30cd139bd",
            "subnet_id": "subnet-01a6f52122a6d5ceb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.karv_igw",
            "module.vpc.aws_route_table.karv_route_table",
            "module.vpc.aws_subnet.karv_db_subnet",
            "module.vpc.aws_vpc.karv_db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "karv_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:subnet/subnet-0aed5897bc0378aa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aed5897bc0378aa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423247328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv_db_vpc-subnet-1"
            },
            "tags_all": {
              "Name": "karv_db_vpc-subnet-1"
            },
            "vpc_id": "vpc-075bdc149718eb63a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.karv_db_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:subnet/subnet-06a129038f8cbe0de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a129038f8cbe0de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423247328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv_db_vpc-subnet-2"
            },
            "tags_all": {
              "Name": "karv_db_vpc-subnet-2"
            },
            "vpc_id": "vpc-075bdc149718eb63a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.karv_db_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:subnet/subnet-01a6f52122a6d5ceb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a6f52122a6d5ceb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423247328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "karv_db_vpc-subnet-3"
            },
            "tags_all": {
              "Name": "karv_db_vpc-subnet-3"
            },
            "vpc_id": "vpc-075bdc149718eb63a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.karv_db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:subnet/subnet-000e9f482cbd677ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000e9f482cbd677ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423247328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet1"
            },
            "tags_all": {
              "Name": "my-subnet1"
            },
            "vpc_id": "vpc-0c5b4e218dcf4a781"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:subnet/subnet-034d75354574298c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034d75354574298c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423247328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet2"
            },
            "tags_all": {
              "Name": "my-subnet2"
            },
            "vpc_id": "vpc-0c5b4e218dcf4a781"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:subnet/subnet-091ef8c90f554a603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ef8c90f554a603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423247328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet3"
            },
            "tags_all": {
              "Name": "my-subnet3"
            },
            "vpc_id": "vpc-0c5b4e218dcf4a781"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "karv_db_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:vpc/vpc-075bdc149718eb63a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06542e365db285536",
            "default_route_table_id": "rtb-0f5dc5e96458cd4cd",
            "default_security_group_id": "sg-022965dfe1f53c398",
            "dhcp_options_id": "dopt-0cdf10aae962eb68c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-075bdc149718eb63a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5dc5e96458cd4cd",
            "owner_id": "637423247328",
            "tags": {
              "Name": "karv_db_vpc"
            },
            "tags_all": {
              "Name": "karv_db_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:637423247328:vpc/vpc-0c5b4e218dcf4a781",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0925f162411bea345",
            "default_route_table_id": "rtb-0404a99367d83775a",
            "default_security_group_id": "sg-07f5d54b5b329a849",
            "dhcp_options_id": "dopt-0cdf10aae962eb68c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5b4e218dcf4a781",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0404a99367d83775a",
            "owner_id": "637423247328",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}